--- a/css/hero.css
+++ b/css/hero.css
@@ -13,10 +13,25 @@
      justify-content: center;
      align-items: center;
    }
+
+   .title-container {
+      width: 100%;
+      height: 80%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+
  @media only screen and (max-width: 768px) {
    .hero {
         display:flex;
         background-image:url('../images/hero-background-mobile.jpg');
         background-position-x:center;
       }
+
+   .title-container {
+      display: none;
+   }
 }
