--- a/css/hero.css
+++ b/css/hero.css
@@ -7,6 +7,7 @@
      background-repeat: no-repeat;
      background-size: cover;
      background-position-y:bottom;
+     background-position-x:center;
      flex-direction: column;
      box-sizing: border-box;
      background-attachment: fixed;
@@ -14,7 +15,7 @@
      align-items: center;
    }
 
-   .title-container {
+   .hero-container {
       width: 100%;
       height: 80%;
       background-color: rgba(0, 0, 0, 0.5);
@@ -24,6 +25,20 @@
       align-items: center;
    }
 
+   img,
+   .logo {
+      width: 215px;
+   }
+
+   .hero-header {
+      margin-bottom: 0;
+   }
+
+   .hero-sub {
+      font-family: 'Kumar One', sans-serif;
+
+   }
+
  @media only screen and (max-width: 768px) {
    .hero {
         display:flex;
@@ -31,7 +46,5 @@
         background-position-x:center;
       }
 
-   .title-container {
-      display: none;
-   }
+
 }
