--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,233 @@
 body {
-   width: 100vw;
-   height: 100vh;
-   margin:0;
-   color: #F9EDE5;
+  width: 100vw;
+  height: 800vh;
+  margin: 0;
+  color: #f9ede5;
+  background-color: black;
+  display: grid;
+  grid-template-rows: 1fr 2fr 3fr 1fr 0.6fr 0.4fr;
+  grid-template-columns: 1fr;
 }
 
 h1 {
-   font-family: 'Kumar One', sans-serif;
-   font-size: 4em;
+  font-family: "Kumar One", sans-serif;
+  font-size: 4em;
 }
 
 h3 {
-   font-family: 'Kumar One Outline', sans-serif;
-   font-size: 3em;
+  font-family: "Kumar One Outline", sans-serif;
+  font-size: 3em;
 }
 
 p {
-   font-family: 'Chakra Petch', monospace;
+  font-family: "Chakra Petch", monospace;
 }
+
+.about-our-gin {
+  height: 100%;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(8, 1fr);
+}
+
+.page-divider {
+  grid-row: 1 / 2;
+}
+
+.ingredients {
+  grid-row: 2 / 4;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+}
+.ingredients > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+.ingredients > .text-container {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.destillation {
+  grid-row: 4 / 6;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+}
+.destillation > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+.destillation > .text-container {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+.packaging {
+  grid-row: 6 / 8;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+}
+.packaging > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+.packaging > .text-container {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+
+.page-divider.recipies {
+  grid-row: 8 / 9;
+  grid-column: 1 / 3;
+}
+
+.recipies {
+  height: 100%;
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.recipies > .gin-tonic {
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+.gin-tonic > .text-container {
+  grid-column: 1 / 2;
+}
+.gin-tonic > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+  grid-column: 2 / 3;
+}
+.recipies > .bramble {
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+.bramble > .text-container {
+  grid-column: 2 / 3;
+}
+.bramble > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+  grid-column: 1 / 2;
+}
+.recipies > .watermelon-fizz {
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+.watermelon-fizz > .text-container {
+  grid-column: 1 / 2;
+}
+.watermelon-fizz > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+  grid-column: 2 / 3;
+}
+.about-us {
+  height: 100%;
+  grid-row: 4 / 5;
+}
+.newsletter {
+  height: 60%;
+  grid-row: 5 / 6;
+}
+
+footer {
+  height: 40%;
+  grid-row: 6 / 7;
+}
+
+/* .about-our-gin {
+  height: 200vh;
+}
+
+.page-divider {
+}
+
+.ingredients {
+}
+.ingredients > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+}
+.ingredients > .text-container {
+}
+
+.destillation {
+  grid-row: 4 / 6;
+}
+.destillation > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+}
+.destillation > .text-container {
+}
+
+.packaging {
+}
+.packaging > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+}
+.packaging > .text-container {
+}
+
+.page-divider.recipies {
+}
+
+.recipies {
+  height: 300vh;
+}
+
+.recipies > .gin-tonic {
+}
+.gin-tonic > .text-container {
+}
+.gin-tonic > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+}
+.recipies > .bramble {
+}
+.bramble > .text-container {
+}
+.bramble > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+}
+.recipies > .watermelon-fizz {
+}
+.watermelon-fizz > .text-container {
+}
+.watermelon-fizz > .image-container {
+  background-color: blanchedalmond;
+  background-size: cover;
+}
+.about-us {
+  height: 100vh;
+}
+.newsletter {
+  height: 60vh;
+}
+
+footer {
+  height: 40vh;
+} */
