--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,11 @@ body {
   height: 800vh;
   margin: 0;
   color: #f9ede5;
-  background-color: black;
+  background-color: white;
   display: grid;
   grid-template-rows: 1fr 2fr 3fr 1fr 0.6fr 0.4fr;
   grid-template-columns: 1fr;
+  grid-gap: 1px;
 }
 
 h1 {
@@ -22,6 +23,58 @@ h3 {
 p {
   font-family: "Chakra Petch", monospace;
 }
+ul {
+  font-family: "Chakra Petch", monospace;
+  list-style: none;
+  margin: 20px 0;
+  padding: 0;
+  line-height: 20px;
+}
+ol {
+  font-family: "Chakra Petch", monospace;
+  list-style: none;
+  margin: 20px 0;
+  padding: 0;
+  line-height: 20px;
+}
+
+.page-divider > h2 {
+  font-family: "Kumar One Outline", sans-serif;
+  text-align: center;
+}
+h4 {
+  font-family: "Kumar One", sans-serif;
+}
+.text-container > h2 {
+  font-family: "Kumar One Outline", sans-serif;
+  font-size: 2.5em;
+}
+.recipies > .content-block > .text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.text-container > h4 {
+  width: 80%;
+  margin: 10px;
+}
+.text-container > p {
+  width: 80%;
+  margin: 10px;
+}
+.page-divider {
+  grid-row: 1 / 2;
+}
+.image-container {
+  background-color: blanchedalmond;
+}
 
 .about-our-gin {
   height: 100%;
@@ -29,12 +82,8 @@ p {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(8, 1fr);
+  background-color: black;
 }
-
-.page-divider {
-  grid-row: 1 / 2;
-}
-
 .ingredients {
   grid-row: 2 / 4;
   display: grid;
@@ -42,7 +91,7 @@ p {
   grid-template-columns: repeat(2, 1fr);
 }
 .ingredients > .image-container {
-  background-color: blanchedalmond;
+  background-image: url("image/ingredients.png");
   background-size: cover;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
@@ -51,7 +100,6 @@ p {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
 }
-
 .destillation {
   grid-row: 4 / 6;
   display: grid;
@@ -59,7 +107,7 @@ p {
   grid-template-columns: repeat(2, 1fr);
 }
 .destillation > .image-container {
-  background-color: blanchedalmond;
+  background-image: url("image/destillation.jpg");
   background-size: cover;
   grid-row: 1 / 2;
   grid-column: 2 / 3;
@@ -68,7 +116,6 @@ p {
   grid-row: 1 / 2;
   grid-column: 1 / 2;
 }
-
 .packaging {
   grid-row: 6 / 8;
   display: grid;
@@ -76,7 +123,7 @@ p {
   grid-template-columns: repeat(2, 1fr);
 }
 .packaging > .image-container {
-  background-color: blanchedalmond;
+  background-image: url("image/packaging.jpg");
   background-size: cover;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
@@ -85,7 +132,6 @@ p {
   grid-row: 1 / 2;
   grid-column: 2 / 3;
 }
-
 .page-divider.recipies {
   grid-row: 8 / 9;
   grid-column: 1 / 3;
@@ -97,8 +143,8 @@ p {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
+  background-color: black;
 }
-
 .recipies > .gin-tonic {
   grid-row: 1 / 2;
   display: grid;
@@ -109,7 +155,6 @@ p {
   grid-column: 1 / 2;
 }
 .gin-tonic > .image-container {
-  background-color: blanchedalmond;
   background-size: cover;
   grid-column: 2 / 3;
 }
@@ -123,7 +168,6 @@ p {
   grid-column: 2 / 3;
 }
 .bramble > .image-container {
-  background-color: blanchedalmond;
   background-size: cover;
   grid-column: 1 / 2;
 }
@@ -137,97 +181,24 @@ p {
   grid-column: 1 / 2;
 }
 .watermelon-fizz > .image-container {
-  background-color: blanchedalmond;
   background-size: cover;
   grid-column: 2 / 3;
 }
+
 .about-us {
   height: 100%;
   grid-row: 4 / 5;
+  background-color: black;
 }
+
 .newsletter {
   height: 60%;
   grid-row: 5 / 6;
+  background-color: black;
 }
 
 footer {
   height: 40%;
   grid-row: 6 / 7;
+  background-color: black;
 }
-
-/* .about-our-gin {
-  height: 200vh;
-}
-
-.page-divider {
-}
-
-.ingredients {
-}
-.ingredients > .image-container {
-  background-color: blanchedalmond;
-  background-size: cover;
-}
-.ingredients > .text-container {
-}
-
-.destillation {
-  grid-row: 4 / 6;
-}
-.destillation > .image-container {
-  background-color: blanchedalmond;
-  background-size: cover;
-}
-.destillation > .text-container {
-}
-
-.packaging {
-}
-.packaging > .image-container {
-  background-color: blanchedalmond;
-  background-size: cover;
-}
-.packaging > .text-container {
-}
-
-.page-divider.recipies {
-}
-
-.recipies {
-  height: 300vh;
-}
-
-.recipies > .gin-tonic {
-}
-.gin-tonic > .text-container {
-}
-.gin-tonic > .image-container {
-  background-color: blanchedalmond;
-  background-size: cover;
-}
-.recipies > .bramble {
-}
-.bramble > .text-container {
-}
-.bramble > .image-container {
-  background-color: blanchedalmond;
-  background-size: cover;
-}
-.recipies > .watermelon-fizz {
-}
-.watermelon-fizz > .text-container {
-}
-.watermelon-fizz > .image-container {
-  background-color: blanchedalmond;
-  background-size: cover;
-}
-.about-us {
-  height: 100vh;
-}
-.newsletter {
-  height: 60vh;
-}
-
-footer {
-  height: 40vh;
-} */
