--- a/css/hero.css
+++ b/css/hero.css
@@ -15,6 +15,10 @@
      align-items: center;
    }
 
+   .mobilelogo {
+      display: none;
+   }
+
    .hero-container {
       width: 100%;
       height: 80%;
@@ -44,7 +48,34 @@
         display:flex;
         background-image:url('../images/hero-background-mobile.jpg');
         background-position-x:center;
+        justify-content:unset;
       }
+   
+   .mobilelogo {
+      display: inline-block;
+      align-self: flex-end;
+      margin: 30px 30px 0px 0px;
+      width: 110px;
+   }
 
+   .hero-container {
+      display: none;
+   }
 
 }
+
+
+/* background-color: darkgrey;
+width: 100%;
+height: 100vh;
+display: flex;
+background-image: url(../images/hero-background.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position-y: top;
+background-position-x: 83%;
+flex-direction: column;
+box-sizing: border-box;
+background-attachment: fixed;
+justify-content: unset;
+align-items: center; */
