--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ h4 {
 }
 
 .about-our-gin {
-  height: 100%;
+  height: 200vh;
   grid-row: 2 / 3;
   display: grid;
   grid-template-columns: 1fr;
@@ -96,7 +96,7 @@ h4 {
   grid-template-columns: repeat(2, 1fr);
 }
 .ingredients > .image-container {
-  background-image: url("image/ingredients.png");
+  background-image: url("../images/ingredients.png");
   background-size: cover;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
@@ -112,7 +112,7 @@ h4 {
   grid-template-columns: repeat(2, 1fr);
 }
 .destillation > .image-container {
-  background-image: url("image/destillation.jpg");
+  background-image: url("../images/destillation.jpg");
   background-size: cover;
   grid-row: 1 / 2;
   grid-column: 2 / 3;
@@ -128,7 +128,7 @@ h4 {
   grid-template-columns: repeat(2, 1fr);
 }
 .packaging > .image-container {
-  background-image: url("image/packaging.jpg");
+  background-image: url("../images/packaging.jpg");
   background-size: cover;
   grid-row: 1 / 2;
   grid-column: 1 / 2;
@@ -160,6 +160,7 @@ h4 {
 }
 .gin-tonic > .image-container {
   height: 100vh;
+  background-image: url("../images/gin-tonic.jpg");
   background-size: cover;
   grid-column: 2 / 3;
 }
@@ -174,6 +175,7 @@ h4 {
 }
 .bramble > .image-container {
   height: 100vh;
+  background-image: url("../images/bramble.jpeg");
   background-size: cover;
   grid-column: 1 / 2;
 }
