--- a/css/hero.css
+++ b/css/hero.css
@@ -45,11 +45,21 @@
 
  @media only screen and (max-width: 768px) {
    .hero {
-        display:flex;
-        background-image:url('../images/hero-background-mobile.jpg');
-        background-position-x:center;
-        justify-content:unset;
-      }
+      background-color: darkgrey;
+      width: 100%;
+      height: 179vh;
+      display: flex;
+      background-image: url(../images/hero-background.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position-y: top;
+      background-position-x: 83%;
+      flex-direction: column;
+      box-sizing: border-box;
+      background-attachment: fixed;
+      justify-content: unset;
+      align-items: center;
+   }
    
    .mobilelogo {
       display: inline-block;
@@ -65,17 +75,3 @@
 }
 
 
-/* background-color: darkgrey;
-width: 100%;
-height: 100vh;
-display: flex;
-background-image: url(../images/hero-background.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-background-position-y: top;
-background-position-x: 83%;
-flex-direction: column;
-box-sizing: border-box;
-background-attachment: fixed;
-justify-content: unset;
-align-items: center; */
