--- a/css/ourgin.css
+++ b/css/ourgin.css
@@ -55,18 +55,29 @@
   }
 
   @media screen and (max-width: 768px) {
-      .about-our-gin {
-          display: flex;
-          flex-direction: row;
+    .ingredients > .image-container {
+      grid-row: 1 / 2;
+      grid-column: 1 / 3;
       }
-/*       .ingredients {
-        display: flex;
-        flex-direction: column;
+    .ingredients > .text-container {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3;
       }
-      .ingredients > .image-container {
-        background-image: url("../images/ingredients.png");
-        background-size: cover;
+    .destillation > .image-container {
+      grid-row: 1 / 2;
+      grid-column: 1 / 3;
       }
-      .ingredients > .text-container {
-      } */
+    .destillation > .text-container {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3;
+      }
+    .packaging > .image-container {
+      grid-row: 1 / 2;
+      grid-column: 1 / 3;
+      }
+    .packaging > .text-container {
+      grid-row: 2 / 3;
+      grid-column: 1 / 3;
+      }
+
   }
