--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,9 @@ h4 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(../images/pc1478_da4bcba9-c02d-40bd-88c6-8b32119d8933_1024x1024.jpg);
+  background-size: cover;
+  padding: 20px;
 }
 .text-container > h4 {
   width: 80%;
