--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -2,6 +2,55 @@
 .about-us {
     height: 100%;
     grid-row: 4 / 5;
+    display: flex;
+    flex-direction: column;
   }
+
+.about-us > .content-block {
+  display: flex;
+  flex-direction: column;
+}
+
+.image-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.image-wrapper > .image-container {
+  width: 28%;
+  height: 200px;
+}
+
+.destillary {
+  background-image: url(../images/Gin-distilleries.-Bombay-Sapphire.-The-River-Test-from-the-top-bridge-620.jpg);
+  background-size: cover;
+  background-position-y: center;
   
+}
+
+.building {
+  background-image: url(../images/architecture-retro.jpg);
+  background-size: cover;
+  background-position-y: center;
   
+}
+
+.storage {
+  background-image: url(../images/04\ _n1a2025_newcrop.jpg);
+  background-size: cover;
+  background-position-y: center;
+
+
+}
+@media screen and (max-width: 768px) {
+  .image-wrapper > .image-container {
+    width: 90%;
+    height: 200px;
+  }
+
+  .destillary, 
+  .building {
+    display: none;
+  }
+}
