--- a/css/ourgin.css
+++ b/css/ourgin.css
@@ -18,6 +18,7 @@
     grid-column: 1 / 2;
   }
   .ingredients > .text-container {
+    background-image: none;
     grid-row: 1 / 2;
     grid-column: 2 / 3;
   }
@@ -34,6 +35,7 @@
     grid-column: 2 / 3;
   }
   .destillation > .text-container {
+    background-image: none;
     grid-row: 1 / 2;
     grid-column: 1 / 2;
   }
@@ -50,6 +52,7 @@
     grid-column: 1 / 2;
   }
   .packaging > .text-container {
+    background-image: none;
     grid-row: 1 / 2;
     grid-column: 2 / 3;
   }
