--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   color: #f9ede5;
   background-color: black;
   display: grid;
-  background-image: url("../images/b4769e3a52766f30e86b375391c84441.jpg");
+  background-image: url("../images/big-background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   grid-template-rows: 1fr 2fr 3fr 1fr 0.6fr 0.4fr;
@@ -64,7 +64,7 @@ h4 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(../images/pc1478_da4bcba9-c02d-40bd-88c6-8b32119d8933_1024x1024.jpg);
+  background-image: url("../images/small-background.jpg");
   background-size: cover;
   padding: 20px;
 }
