--- a/css/recipies.css
+++ b/css/recipies.css
@@ -1,75 +1,81 @@
 .recipies {
-    height: 170%;
-    grid-row: 3 / 4;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
-  }
-  .recipies > .gin-tonic {
-    grid-row: 1 / 2;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-  }
-  .gin-tonic > .text-container {
-    grid-column: 1 / 2;
-  }
-  .gin-tonic > .image-container {
-    background-image: url(../images/gin-tonic.jpg);
-    background-size: cover;
-    background-position-y: center;
-    grid-column: 2 / 3;
-  }
-  .recipies > .bramble {
-    grid-row: 2 / 3;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-  }
-  .bramble > .text-container { 
-    grid-column: 2 / 3;
-  }
-  .bramble > .image-container {
-    background-image: url(../images/bramble.jpeg);
-    background-size: cover;
-    background-position-y: center;
-    grid-column: 1 / 2;
-  }
-  .recipies > .watermelon-fizz {
-    grid-row: 3 / 4;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr;
-  }
-  .watermelon-fizz > .text-container {
-    grid-column: 1 / 2;
-  }
-  .watermelon-fizz > .image-container {
-    background-image: url(../images/watermelon-fizz.jpg);
-    background-size: cover;
-    background-position-y: center;
-    grid-column: 2 / 3;
-  }
-  .page-divider.recipies {
-    grid-row: 8 / 9;
-    grid-column: 1 / 3;
-  }
-  
+  height: 100%;
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+}
+.recipies > .gin-tonic {
+  height: 100vh;
+  grid-row: 1 / 2;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+.gin-tonic > .text-container {
+  background-image: url("../images/small-background.jpg");
+  grid-column: 1 / 2;
+}
+.gin-tonic > .image-container {
+  background-image: url(../images/gin-tonic.jpg);
+  background-size: cover;
+  background-position-y: center;
+  grid-column: 2 / 3;
+}
+.recipies > .bramble {
+  height: 100vh;
+  grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+.bramble > .text-container {
+  background-image: url("../images/small-background.jpg");
+  grid-column: 2 / 3;
+}
+.bramble > .image-container {
+  background-image: url(../images/bramble.jpeg);
+  background-size: cover;
+  background-position-y: center;
+  grid-column: 1 / 2;
+}
+.recipies > .watermelon-fizz {
+  height: 100vh;
+  grid-row: 3 / 4;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+}
+.watermelon-fizz > .text-container {
+  background-image: url("../images/small-background.jpg");
+  grid-column: 1 / 2;
+}
+.watermelon-fizz > .image-container {
+  background-image: url(../images/watermelon-fizz.jpg);
+  background-size: cover;
+  background-position-y: center;
+  grid-column: 2 / 3;
+}
+.page-divider.recipies {
+  grid-row: 8 / 9;
+  grid-column: 1 / 3;
+}
+
 @media screen and (max-width: 768px) {
   .gin-tonic > .text-container {
-    background-image: url(../images/gin-tonic.jpg);;
+    background-image: url(../images/gin-tonic.jpg);
     grid-column: 1 / 3;
   }
   .gin-tonic > .image-container {
     display: none;
   }
-  .bramble > .text-container { 
+  .bramble > .text-container {
     background-image: url(../images/bramble.jpeg);
     background-size: cover;
     grid-column: 1 / 3;
   }
   .bramble > .image-container {
-  display: none;
+    display: none;
   }
   .watermelon-fizz > .text-container {
     background-image: url(../images/watermelon-fizz.jpg);
@@ -77,7 +83,6 @@
     grid-column: 1 / 3;
   }
   .watermelon-fizz > .image-container {
-  display: none;
+    display: none;
   }
 }
-  
