--- a/css/newsletter.css
+++ b/css/newsletter.css
@@ -1,5 +1,14 @@
-
 .newsletter {
-    height: 60%;
-    grid-row: 5 / 6;
-  }
+  height: 60%;
+  grid-row: 5 / 6;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
