tested some stuff

--- a/css/recipies.css
+++ b/css/recipies.css
@@ -19,7 +19,7 @@
 .gin-tonic > .image-container {
   background-image: url(../images/gin-tonic.jpg);
   background-size: cover;
-  background-position-y: center;
+  background-position: center;
   grid-column: 2 / 3;
 }
 .recipies > .bramble {
@@ -36,7 +36,7 @@
 .bramble > .image-container {
   background-image: url(../images/bramble.jpeg);
   background-size: cover;
-  background-position-y: center;
+  background-position: center;
   grid-column: 1 / 2;
 }
 .recipies > .watermelon-fizz {
@@ -53,7 +53,7 @@
 .watermelon-fizz > .image-container {
   background-image: url(../images/watermelon-fizz.jpg);
   background-size: cover;
-  background-position-y: center;
+  background-position: center;
   grid-column: 2 / 3;
 }
 .page-divider.recipies {
