--- a/css/recipies.css
+++ b/css/recipies.css
@@ -22,11 +22,12 @@
   background-image: url("../images/small-background.jpg");
   grid-column: 1 / 2;
 }
-.gin-tonic > .image-container {
+.gin-tonic > .filter > .image-container {
   background-image: url(../images/gin-tonic.jpg);
   background-size: cover;
   background-position: center;
   grid-column: 2 / 3;
+  opacity: 0.9;
 }
 .recipies > .bramble {
   height: 100vh;
@@ -39,7 +40,7 @@
   background-image: url("../images/small-background.jpg");
   grid-column: 2 / 3;
 }
-.bramble > .image-container {
+.bramble > .filter > .image-container {
   background-image: url(../images/bramble.jpeg);
   background-size: cover;
   background-position: center;
@@ -56,7 +57,7 @@
   background-image: url("../images/small-background.jpg");
   grid-column: 1 / 2;
 }
-.watermelon-fizz > .image-container {
+.watermelon-fizz > .filter > .image-container {
   background-image: url(../images/watermelon-fizz.jpg);
   background-size: cover;
   background-position: center;
