--- a/css/footer.css
+++ b/css/footer.css
@@ -1,13 +1,27 @@
 footer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
+    border-top: 2px #f9ede5 solid;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+.footer-wrap {
+    display: flex;
+    flex-direction: row;
+    margin: 20px 0px;
 }
 
 .contact {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0px 50px;
+    padding: 20px 50px;
+    align-items: flex-end;
+}
+
+.adress {
+    margin-right: 40px;
 }
 
 .badges {
@@ -18,4 +32,18 @@ footer {
 
 .socbadge {
     width: 50px;
+}
+
+.map {
+    width: 450px;
+    height: 200px;
+    background-color: blanchedalmond;
+    justify-self: flex-start;
+}
+
+@media screen and (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+    }
+   
 }
