--- a/css/ourgin.css
+++ b/css/ourgin.css
@@ -1,12 +1,15 @@
 .about-our-gin {
-  height: 100%;
+  /* height: auto; */
   grid-row: 2 / 3;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: 15vw 30vw 30vw 30vw 15vw;
+}
+.about-our-gin > .page-divider {
+  grid-row: 1 / 2;
 }
 .ingredients {
-  grid-row: 2 / 4;
+  grid-row: 2 / 3;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: repeat(2, 1fr);
@@ -24,7 +27,7 @@
   grid-column: 2 / 3;
 }
 .destillation {
-  grid-row: 4 / 6;
+  grid-row: 3 / 4;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: repeat(2, 1fr);
@@ -41,7 +44,7 @@
   grid-column: 1 / 2;
 }
 .packaging {
-  grid-row: 6 / 8;
+  grid-row: 4 / 5;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: repeat(2, 1fr);
@@ -56,6 +59,10 @@
   background-image: none;
   grid-row: 1 / 2;
   grid-column: 2 / 3;
+}
+.page-divider.recipies {
+  grid-row: 5 / 6;
+  grid-column: 1 / 3;
 }
 
 @media screen and (max-width: 768px) {
