--- a/css/ourgin.css
+++ b/css/ourgin.css
@@ -1,5 +1,5 @@
 .about-our-gin {
-  /* height: auto; */
+  height: auto;
   grid-row: 2 / 3;
   display: grid;
   grid-template-columns: 1fr;
@@ -66,15 +66,25 @@
 }
 
 @media screen and (max-width: 768px) {
-  .ingredients > .image-container {
+  .ingredients {
+    grid-template-rows: 1fr 1fr;
+  }
+  .ingredients > .filter {
+    height: 100%;
     grid-row: 1 / 2;
     grid-column: 1 / 3;
+  }
+  .ingredients > .filter > .image-container {
+    height: 100%;
   }
   .ingredients > .text-container {
     grid-row: 2 / 3;
     grid-column: 1 / 3;
   }
-  .destillation > .image-container {
+  .destillation {
+    grid-template-rows: 1fr 1fr;
+  }
+  .destillation > .filter > .image-container {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
   }
@@ -82,7 +92,10 @@
     grid-row: 2 / 3;
     grid-column: 1 / 3;
   }
-  .packaging > .image-container {
+  .packaging {
+    grid-template-rows: 1fr 1fr;
+  }
+  .packaging > .filter > .image-container {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
   }
