--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,15 @@ body {
   margin: 0;
   color: #f9ede5;
   background-color: black;
-  display: grid;
   background-image: url("../images/big-background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+.EVERYTHING {
+  display: grid;
   grid-template-rows: 1fr 2fr 3fr 1fr 0.6fr 0.4fr;
   grid-template-columns: 1fr;
-  grid-gap: 1px;
 }
-
 h1 {
   font-family: "Kumar One", sans-serif;
   font-size: 4em;
@@ -96,6 +96,6 @@ ol {
 }
 
 footer {
-  height: 40%;
+  height: 100%;
   grid-row: 6 / 7;
 }
