--- a/css/ourgin.css
+++ b/css/ourgin.css
@@ -70,7 +70,7 @@
     grid-template-rows: 1fr 1fr;
   }
   .ingredients > .filter {
-    height: 100%;
+    height: 100px;
     grid-row: 1 / 2;
     grid-column: 1 / 3;
   }
