--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
   /* height: 800vh; */
   margin: 0;
   color: #f9ede5;
-  background-color: black;
   background-image: url("../images/big-background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -13,6 +12,25 @@ body {
   grid-template-rows: 1fr 2fr 3fr 1fr 0.6fr 0.4fr;
   grid-template-columns: 1fr;
 }
+.hero {
+  grid-row: 1 / 2;
+}
+.about-our-gin {
+  grid-row: 2 / 3;
+}
+.recipies {
+  grid-row: 3 / 4;
+}
+.about-us {
+  grid-row: 4 / 5;
+}
+.newsletter {
+  grid-row: 5 / 6;
+}
+footer {
+  grid-row: 6 / 7;
+}
+
 h1 {
   font-family: "Kumar One", sans-serif;
   font-size: 4em;
@@ -78,9 +96,6 @@ ol {
 .text-container > p {
   width: 80%;
   margin: 10px;
-}
-.page-divider {
-  grid-row: 1 / 2;
 }
 .image-container {
   height: 100%;
